Fixed alignment for CTA, messed around with information squares

--- a/styles.css
+++ b/styles.css
@@ -34,10 +34,11 @@ a{
 
 .hero{
     display: flex;
+    justify-content: space-between;
     background-color: #1F2937;
     font-family: Roboto, Helvetica, sans-serif;
     padding: 10%;
-    gap: 10%;
+    padding-right: 25%;
 }
 
 .heroText{
@@ -79,12 +80,13 @@ button{
 
 .info{
     display: flex;
-    flex-shrink: 1;
+    /* flex-shrink: 1; */
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     padding: 5%;
-    gap: 50px;
+    gap: 16px;
+    height: 35vh;
 }
 
 .infoHeading{
@@ -98,15 +100,14 @@ button{
 .infoContent{
     display: flex;
     justify-content: space-evenly;
-    width: 100%;
+    max-width: 60%;
 }
 
 .square{
     display: flex;
-    flex-shrink: 1;
 
-    height: 200px;
-    width: 200px;
+    height: 100%;
+    width: 100%;
     border: 4px solid #3882F6;
     border-radius: 16px;
     background-color: transparent;
@@ -115,7 +116,9 @@ button{
 .infoPiece{
     display: flex;
     flex-direction: column;
-    width: 200px;
+    /* flex-shrink: 1; */
+    width: 20%;
+    height: 20%;
     gap: 5px;
     /* flex-wrap: wrap; */
 }
@@ -164,11 +167,12 @@ button{
     padding: 3% 0.5%;
     border-radius: 8px;
     color: white;
+    margin: 5% 15%;
 }
 
 .bigButtonButton{
     border: 2px solid white;
-    padding: 8px 14px;
+    /* padding: 8px 14px; */
 
 }
 
@@ -182,6 +186,14 @@ button{
     font-size: 16px;
     color: #E5E7EB;
 
+}
+
+.wrapper{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer{
